Entry point and project setup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,10 @@
 cmake_minimum_required(VERSION 3.5)
 project(Gizmo)
 
+if(WIN32)
+    add_definitions(-DGIZMO_WINDOWS=true)
+endif()
+
+
 add_subdirectory(src/Gizmo)
-add_subdirectory(src/Sandbox)  
+add_subdirectory(src/Sandbox)
