Implement Loggin with spdlog

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ if(WIN32)
     add_definitions(-DGIZMO_WINDOWS=true)
 endif()
 
+add_subdirectory(include/Gizmo/external/spdlog)
 
 add_subdirectory(src/Gizmo)
 add_subdirectory(src/Sandbox)
