--- a/src/Sandbox/CMakeLists.txt
+++ b/src/Sandbox/CMakeLists.txt
@@ -2,5 +2,5 @@ project(Sandbox)
 
 file(GLOB Sandbox_SRC "*.cpp")
 add_executable(Sandbox ${Sandbox_SRC})
-target_include_directories(Sandbox PRIVATE ../../include)
+target_include_directories(Sandbox PRIVATE ../../include ../../include/Gizmo/external/spdlog/include)
 target_link_libraries(Sandbox PRIVATE Gizmo)
