Add Linux Compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 if(WIN32)
     add_definitions(-DGIZMO_WINDOWS=true)
+elseif(UNIX)
+    set(CMAKE_POSITION_INDEPENDENT_CODE TRUE)
 endif()
 
 add_subdirectory(include/Gizmo/external/spdlog)
